[Fix] Actions Popup - make right aligned instead of centered

--- a/src/sass/_parts/actions.sass
+++ b/src/sass/_parts/actions.sass
@@ -24,6 +24,7 @@ $buttonWidth: 30px
 		position: absolute
 		top: 15px
 		left: (($popupWidth - $buttonWidth)/2) * -1
+		left: ($popupWidth * 0.75) * -1
 		width: $popupWidth
 		border-radius: $borderRadius
 		+arrow($side: "top", $align: "center", $size: 7px, $color: $bgColor, $borderColor: $subwhite, $borderSize: 3px)
@@ -31,11 +32,15 @@ $buttonWidth: 30px
 		color: black
 		opacity: 0
 		+transform(scale(0.1))
-		+transform-origin(50% 0)
+		+transform-origin(84% 0)
 		+transitionTransform($time:$animationTime, $easing:$ease-in-out-circ, $additional:opacity $animationTime $ease-in-out-circ)
 		&.is_visible
 			opacity: 1
 			+transform(scale(1))
+
+		&:before, // Arrow
+		&:after,
+			right: 16%
 
 		&-item
 			position: relative
